--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
@@ -22,66 +29,63 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a>
-           </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
- 
-      
     </header>
     <!-- Main section -->
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-       </section>
-       <section>
+      </section>
+      <section>
         <h2 hidden>features</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
+            </p>
+          </li>
 
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital growth opportunities
+              and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
       <!-- What are we doing -->
       <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/imac.jpg" alt="desctop" width="360">
+            <img src="./images/imac.jpg" alt="desctop" width="360" height="300" />
           </li>
           <li>
-            <img src="./images/iphone.jpg" alt="phone" width="360">
+            <img src="./images/iphone.jpg" alt="phone" width="360" height="300" />
           </li>
           <li>
-            <img src="./images/inhand.jpg" alt="phone_in_hand" width="360">
+            <img src="./images/inhand.jpg" alt="phone_in_hand" width="360" height="300" />
           </li>
         </ul>
       </section>
@@ -90,22 +94,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark.jpg" alt="man_mark" width="264">
+            <img src="./images/mark.jpg" alt="man_mark" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/ford.jpg" alt="man_tom" width="264">
+            <img src="./images/ford.jpg" alt="man_tom" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="woman_camila" width="264">
+            <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/wilson.jpg" alt="man_daniel" width="264">
+            <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -116,8 +120,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
