--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>portfolio</title>
-    <link rel="stylesheet" href="./styles/style.css" >
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <!-- Navigation on pages -->
-    <header>
+    <header class="header-page">
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
@@ -38,67 +44,67 @@
           <li><a href="#design"></a>Design</li>
           <li><a href="#marketing"></a>Marketing</li>
         </ul>
-      </section>
-      <!-- Section one -->
-      <section>
+
+        <!-- Section one -->
+
         <h2 hidden>section-one</h2>
         <ul>
           <li>
             <img
               src="./images/banking_app_interface_concept.jpg"
               alt="banking_app_interface_concept"
-            >
+            />
           </li>
           <li><h3>Banking App Interface Concept</h3></li>
           <li><p>App</p></li>
         </ul>
         <ul>
-          <li><img src="./images/cashless_payment.jpg" alt="cashless_payment" ></li>
+          <li><img src="./images/cashless_payment.jpg" alt="cashless_payment" /></li>
           <li><h3>Cashless Payment</h3></li>
           <li><p>Marketing</p></li>
         </ul>
         <ul>
-          <li><img src="./images/meditaion_app.jpg" alt="meditaion_app" ></li>
+          <li><img src="./images/meditaion_app.jpg" alt="meditaion_app" /></li>
           <li><h3>Meditaion App</h3></li>
           <li><p>App</p></li>
         </ul>
-      </section>
-      <!-- section two -->
-      <section>
+
+        <!-- section two -->
+
         <h2 hidden>section-two</h2>
         <ul>
-          <li><img src="./images/taxi_service.jpg" alt="taxi_service" ></li>
+          <li><img src="./images/taxi_service.jpg" alt="taxi_service" /></li>
           <li><h3>Taxi Service</h3></li>
           <li><p>Marketing</p></li>
         </ul>
         <ul>
-          <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" ></li>
+          <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" /></li>
           <li><h3>Screen Illustrations</h3></li>
           <li><p>Design</p></li>
         </ul>
         <ul>
-          <li><img src="./images/online_courses.jpg" alt="online_courses" ></li>
+          <li><img src="./images/online_courses.jpg" alt="online_courses" /></li>
           <li><h3>Online Courses</h3></li>
           <li><p>Marketing</p></li>
         </ul>
-      </section>
-      <!-- section-three -->
-      <section>
+
+        <!-- section-three -->
+
         <h2 hidden>section-three</h2>
         <ul>
           <li>
-            <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" >
+            <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" />
           </li>
           <li><h3>Instagram Stories Concept</h3></li>
           <li><p>Design</p></li>
         </ul>
         <ul>
-          <li><img src="./images/organic_food.jpg" alt="organic_food" ></li>
+          <li><img src="./images/organic_food.jpg" alt="organic_food" /></li>
           <li><h3>Organic Food</h3></li>
           <li><p>Web Site</p></li>
         </ul>
         <ul>
-          <li><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" ></li>
+          <li><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" /></li>
           <li><h3>Fresh Coffee</h3></li>
           <li><p>Web Site</p></li>
         </ul>
