--- a/portfolio.html
+++ b/portfolio.html
@@ -17,103 +17,160 @@
     <!-- Navigation on pages -->
     <header class="header-page">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-header-light">Studio</span></a
+        >
+        <ul class="site-menu list">
+          <li class="site-menu-item">
+            <a class="site-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="site-menu-item">
+            <a class="site-menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="site-menu-item"><a class="site-menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="contacts">
+        <ul class="contacts-list list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="contact-phone link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <!-- Main menu -->
     <main>
-      <section>
-        <h2 hidden>menu</h2>
-        <ul>
-          <li><a href="#all"></a>ALL</li>
-          <li><a href="#web-site"></a>Web Site</li>
-          <li><a href="#app"></a>App</li>
-          <li><a href="#design"></a>Design</li>
-          <li><a href="#marketing"></a>Marketing</li>
-        </ul>
-
-        <!-- Section one -->
-
-        <h2 hidden>section-one</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/banking_app_interface_concept.jpg"
-              alt="banking_app_interface_concept"
-            />
+      <section class="main-section">
+        <h1 class="main-section-filter" hidden>Filter Buttons</h1>
+        <ul class="filter-btn-list list">
+          <li class="filter-btn-item">
+            <button class="filter-but" type="button">All</button>
           </li>
-          <li><h3>Banking App Interface Concept</h3></li>
-          <li><p>App</p></li>
-        </ul>
-        <ul>
-          <li><img src="./images/cashless_payment.jpg" alt="cashless_payment" /></li>
-          <li><h3>Cashless Payment</h3></li>
-          <li><p>Marketing</p></li>
-        </ul>
-        <ul>
-          <li><img src="./images/meditaion_app.jpg" alt="meditaion_app" /></li>
-          <li><h3>Meditaion App</h3></li>
-          <li><p>App</p></li>
-        </ul>
-
-        <!-- section two -->
-
-        <h2 hidden>section-two</h2>
-        <ul>
-          <li><img src="./images/taxi_service.jpg" alt="taxi_service" /></li>
-          <li><h3>Taxi Service</h3></li>
-          <li><p>Marketing</p></li>
-        </ul>
-        <ul>
-          <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" /></li>
-          <li><h3>Screen Illustrations</h3></li>
-          <li><p>Design</p></li>
-        </ul>
-        <ul>
-          <li><img src="./images/online_courses.jpg" alt="online_courses" /></li>
-          <li><h3>Online Courses</h3></li>
-          <li><p>Marketing</p></li>
-        </ul>
-
-        <!-- section-three -->
-
-        <h2 hidden>section-three</h2>
-        <ul>
-          <li>
-            <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" />
+          <li class="filter-btn-item">
+            <button class="filter-but" type="button">Web Site</button>
           </li>
-          <li><h3>Instagram Stories Concept</h3></li>
-          <li><p>Design</p></li>
+          <li class="filter-btn-item">
+            <button class="filter-but" type="button">App</button>
+          </li>
+          <li class="filter-btn-item">
+            <button class="filter-but" type="button">Design</button>
+          </li>
+          <li class="filter-btn-item">
+            <button class="filter-but" type="button">Marketing</button>
+          </li>
         </ul>
-        <ul>
-          <li><img src="./images/organic_food.jpg" alt="organic_food" /></li>
-          <li><h3>Organic Food</h3></li>
-          <li><p>Web Site</p></li>
-        </ul>
-        <ul>
-          <li><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" /></li>
-          <li><h3>Fresh Coffee</h3></li>
-          <li><p>Web Site</p></li>
+
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <a class="portfolio-links link" href=""
+              ><img
+                src="./images/banking_app_interface_concept.jpg"
+                alt="banking_app_interface_concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-dscr">App</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img
+                src="./images/cashless_payment.jpg"
+                alt="cashless_payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-dscr">Marketing</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img src="./images/meditaion_app.jpg" alt="meditaion_app" width="360" height="300" />
+
+              <h2 class="portfolio-title">Meditaion App</h2>
+              <p class="portfolio-dscr">App</p></a
+            >
+          </li>
+
+          <!-- section thre -->
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img src="./images/taxi_service.jpg" alt="taxi_service" width="360" height="300" />
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-dscr">Marketing</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img
+                src="./images/screen_illustrations.jpg"
+                alt="screen_illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-dscr">Design</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href="">
+              <img
+                src="./images/online_courses.jpg"
+                alt="online_courses"
+                width="360"
+                height="300"
+              />
+
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-dscr">Marketing</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img
+                src="./images/instagram_stories_concept.jpg"
+                alt="instagram_stories_concept"
+                width="360"
+                height="300"
+              />
+
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-dscr">Design</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img src="./images/organic_food.jpg" alt="organic_food" width="360" height="300" />
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-dscr">Web Site</p></a
+            >
+          </li>
+
+          <li>
+            <a class="portfolio-links link" href=""
+              ><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" width="360" height="300" />
+
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-dscr">Web Site</p></a
+            >
+          </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo link">Web<span class="logo-footer-dark">Studio</span></a>
+      <p class="footer-dscr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
