--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           >Web<span class="logo-header-light">Studio</span></a
         >
         <ul class="site-menu list">
-
+          
           <li class="site-menu-item">
             <a class="site-menu-link link" href="./index.html">Studio</a>
           </li>
@@ -35,9 +35,9 @@
       <address class="contacts">
         <ul class="contacts-list list">
           <li>
-            <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="site-menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="site-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
