--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -21,7 +21,6 @@
           >Web<span class="logo-header-light">Studio</span></a
         >
         <ul class="site-menu list">
-          
           <li class="site-menu-item">
             <a class="site-menu-link link" href="./index.html">Studio</a>
           </li>
@@ -29,7 +28,8 @@
             <a class="site-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="site-menu-item">
-            <a class="site-menu-link link" href="">Contacts</a></li>
+            <a class="site-menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="contacts">
@@ -101,43 +101,29 @@
       <section class="our-team">
         <h2 class="our-team-title">Our Team</h2>
         <ul class="our-team-list list">
-
           <li class="our-team-item">
-            <img src="./images/mark.jpg" 
-            alt="man_mark" 
-            width="264" 
-            height="260" />
+            <img src="./images/mark.jpg" alt="man_mark" width="264" height="260" />
             <h3 class="our-team-members">Mark Guerrero</h3>
             <p class="our-team-desc">Product Designer</p>
           </li>
 
           <li class="our-team-item">
-            <img src="./images/ford.jpg"
-             alt="man_tom" 
-             width="264" 
-             height="260" />
+            <img src="./images/ford.jpg" alt="man_tom" width="264" height="260" />
             <h3 class="our-team-members">Tom Ford</h3>
             <p class="our-team-desc">Frontend Developer</p>
           </li>
 
           <li class="our-team-item">
-            <img src="./images/camila.jpg"
-             alt="woman_camila"
-              width="264"
-               height="260" />
+            <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260" />
             <h3 class="our-team-members">Camila Garcia</h3>
             <p class="our-team-desc">Marketing</p>
           </li>
 
           <li class="our-team-item">
-            <img src="./images/wilson.jpg"
-             alt="man_daniel" 
-             width="264" 
-             height="260" />
+            <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260" />
             <h3 class="our-team-members">Daniel Wilson</h3>
             <p class="our-team-desc">UI Designer</p>
           </li>
-
         </ul>
       </section>
     </main>
